Fix check alignment

--- a/07-lection5/01-checkbox/checkbox.css
+++ b/07-lection5/01-checkbox/checkbox.css
@@ -19,6 +19,7 @@
   height: 28px;
   border: solid 1px var(--grey-2);
   border-radius: 4px;
+  padding: 4px 0 0 4px;
 }
 
 .checkbox__icon {
@@ -26,9 +27,6 @@
   width: 100%;
   height: 100%;
   color: var(--white);
-  position: relative;
-  top: 3px;
-  left: 2px;
 }
 
 .checkbox__title {
